Fixed logo alignment and aspect ratio

--- a/RUA/RUACube.html
+++ b/RUA/RUACube.html
@@ -470,111 +470,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#i2.cube.css:cube/base/css.1*/
-#i2.shape-holder {
-    position: absolute;
-
-    -ms-touch-action: none;
-    background: transparent;
-
-    opacity: 0;
-    -webkit-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    transition: opacity 0.5s, scale 0.8s;
-}
-
-#i2 .cube-Panel {
-    -webkit-backface-visibility:hidden;
-    -moz-backface-visibility:hidden;
-    -ms-backface-visibility: visible;
-    backface-visibility:hidden;
-    background-size: cover;
-    overflow: hidden;
-}
-
-/*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-}
-/*#/#*//*#i4.i130.image.css:image/base/css*/
-#i130 { opacity: 1; }
-/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 172px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1; height: 42px; width: 59px!important;}
-/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
-#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 61px; height: 15px;
-        -ms-transform: translate(0, 0) translate(227px, 225px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(227px, 225px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(227px, 225px) rotate(0deg);
-        transform: translate(0, 0) translate(227px, 225px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i167.i168.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
-/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-}
-/*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
-/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 301px; height: 170px;
-        -ms-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i66.image.css:image/base/css*/
-#i66 { opacity: 1; height: 42; width: 59px!important;}
-/*#/#*//*#cube.css:cube/globalcss.1*/
+/*#cube.css:cube/globalcss.1*/
 
 .transformation {
     -webkit-transform: translateZ(-1000px);
@@ -703,17 +599,121 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
+#i2.shape-holder {
+    position: absolute;
+
+    -ms-touch-action: none;
+    background: transparent;
+
+    opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    transition: opacity 0.5s, scale 0.8s;
+}
+
+#i2 .cube-Panel {
+    -webkit-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -ms-backface-visibility: visible;
+    backface-visibility:hidden;
+    background-size: cover;
+    overflow: hidden;
+}
+
+/*#/#*//*#i4.i20.shape.css:shape/base/css*/
+#i20 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+}
+/*#/#*//*#i4.i130.image.css:image/base/css*/
+#i130 { opacity: 1; }
+/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 172px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i64.image.css:image/base/css*/
+#i64 { opacity: 1; height: 29px; width: 41px!important;}
+/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
+#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden;
+        -ms-transform: translate(0, 0) translate(257px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(257px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(257px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(257px, 217px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i5.i24.text.css:text/base/css*/
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+}
+/*#/#*//*#i5.i58.image.css:image/base/css*/
+#i58 { opacity: 1; }
+/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 301px; height: 170px;
+        -ms-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i66.image.css:image/base/css*/
+#i66 { opacity: 1; height: 29px; width: 41px!important;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
-#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 63px; height: 15px;
-        -ms-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
+#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 29px;
+        -ms-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i169.i170.actions-clicktag.css:actions-clicktag/base/css.1*/
+/*#/#*//*#i173.i174.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -753,13 +753,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(-8px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i68.image.css:image/base/css*/
-#i68 { opacity: 1; height: 42px; width: 59px!important;}
+#i68 { opacity: 1; height: 29px; width: 41px!important;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 15px;
-        -ms-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
-        transform: translate(0, 0) translate(227px, 221px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 29px;
+        -ms-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -800,6 +800,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i130" src="https://i.imgur.com/A1JMezc.png"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/xsff2W6.png"/>
+<!--#/#--><!--#i4.i91.shape.html:shape/html-->
+<div id="i91"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -812,6 +814,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i58" src="https://i.imgur.com/nvBOot9.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
 <img id="i66" src="https://i.imgur.com/xsff2W6.png"/>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -824,6 +828,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i60" src="https://i.imgur.com/IIeJ4Nr.png"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/xsff2W6.png"/>
+<!--#/#--><!--#i6.i99.shape.html:shape/html-->
+<div id="i99"></div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -867,10 +873,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i4.i64.image.js:image/base/js*/
 
-/*#/#*//*#i91.i167.actions.js:actions/base/js*/
+/*#/#*//*#i91.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
-    /*#i167.i168.actions-clicktag.js:actions-clicktag/base/js.1*/
+    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://abogados-plusvalia-municipal.es/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -885,10 +891,10 @@ document.getElementById('i4').addEventListener('click', function(e){
 
 /*#/#*//*#i5.i66.image.js:image/base/js*/
 
-/*#/#*//*#i95.i169.actions.js:actions/base/js*/
+/*#/#*//*#i95.i173.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
-    /*#i169.i170.actions-clicktag.js:actions-clicktag/base/js.1*/
+    /*#i173.i174.actions-clicktag.js:actions-clicktag/base/js.1*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://abogados-plusvalia-municipal.es/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
