Fixed conflict in size styles with logo

--- a/RUA/RUACube.html
+++ b/RUA/RUACube.html
@@ -704,7 +704,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i66.image.css:image/base/css*/
 #i66 { opacity: 1; height: 25px; width: 35px!important;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
-#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 29px;
+#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden;
         -ms-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
@@ -755,7 +755,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i68.image.css:image/base/css*/
 #i68 { opacity: 1; height: 25px; width: 35px!important;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 29px;
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden;
         -ms-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(252px, 217px) rotate(0deg);
