--- a/Bancomer/Cube3dExtent.html
+++ b/Bancomer/Cube3dExtent.html
@@ -883,7 +883,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i195.text.html:text/html-->
 <div id="i195">Conoce el nuevo Bancomer.com</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/AHWB37E.jpg"/>
+<img id="i58" src="https://i.imgur.com/XwbKSj5.jpg"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
 <img id="i66" src="https://i.imgur.com/JTmm9Rf.png"/>
 <!--#/#--><!--#i5.i179.button.html:button/html-->
@@ -901,7 +901,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i197.text.html:text/html-->
 <div id="i197">Conoce el nuevo Bancomer.com</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/djGggHK.jpg"/>
+<img id="i60" src="https://i.imgur.com/XwbKSj5.jpg"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/JTmm9Rf.png"/>
 <!--#/#--><!--#i6.i183.button.html:button/html-->
