--- a/Bancomer/bancSlide2.html
+++ b/Bancomer/bancSlide2.html
@@ -254,7 +254,7 @@
     <div class="te-container">
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/CDg1YX4.png" alt="" /> <img src="https://i.imgur.com/UCIkwi0.png" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
