--- a/Bancomer/bancSlide.html
+++ b/Bancomer/bancSlide.html
@@ -245,7 +245,11 @@
             margin-left: -72px;
             margin-top: 42.5px
         }
-
+        
+        @media screen and (max-width: 480px) {
+            .ctaButton {
+                font-size: 10px;
+            }
         }
     </style>
 </head>
