Added Media query CTA button font size in slide 2

--- a/Bancomer/bancSlide2.html
+++ b/Bancomer/bancSlide2.html
@@ -246,6 +246,10 @@
             margin-top: 42.5px
         }
 
+        @media screen and (max-width: 480px) {
+            .ctaButton {
+                font-size: 10px;
+            }
         }
     </style>
 </head>
