Fixed CTA button styles

--- a/Bancomer/bancSlide.html
+++ b/Bancomer/bancSlide.html
@@ -248,7 +248,8 @@
         
         @media screen and (max-width: 480px) {
             .ctaButton {
-                font-size: 10px;
+                font-size: 10px!important;
+                font-weight: normal;
             }
         }
     </style>
