Fixed CTA buttons styles

--- a/Bancomer/bancSlide.html
+++ b/Bancomer/bancSlide.html
@@ -248,7 +248,7 @@
         
         @media screen and (max-width: 480px) {
             .ctaButton {
-                font-size: 10px!important;
+                font-size: 10px;
                 font-weight: normal;
             }
         }
