--- a/Bancomer/bancSlide2.html
+++ b/Bancomer/bancSlide2.html
@@ -249,6 +249,7 @@
         @media screen and (max-width: 480px) {
             .ctaButton {
                 font-size: 10px;
+                font-weight: normal;
             }
         }
     </style>
