Changed Security protocol with EventListener

--- a/Testings/videoTemplate.html
+++ b/Testings/videoTemplate.html
@@ -218,7 +218,7 @@
         //Deteccion de Cargado el Video Youtube
         function onPlayerReady(e) {
             //Deteccion de Scroll cuando el video este Cargado
-            window.parent.onscroll = function(){
+            window.parent.addEventListener('scroll', function(){
                 //Iniciacion de Variables para dibujar lineas de verificacion en viewportz
                 var videoCont = document.querySelector('.videoContainer');
                 var windowHeight = window.innerHeight;
@@ -246,7 +246,7 @@
                     e.target.stopVideo();
                     console.log('Element is Muted');
                 }
-            }
+            });
             
             //Encender Volumen del video al hacer MouseOver
             var videoContainer = document.querySelector('.videoContainer');
