--- a/Bancomer/slide10.html
+++ b/Bancomer/slide10.html
@@ -50,20 +50,20 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <title>Slider_Huawei</title>
     <style>
-        .BancomSlide1 a,
-        .BancomSlide1 a:hover {
+        .BancomSlide2 a,
+        .BancomSlide2 a:hover {
             text-decoration: none;
             color: white
         }
 
-        .BancomSlide1 .te-container {
+        .BancomSlide2 .te-container {
             width: 300px;
             height: 250px;
             margin: 0 auto;
             background-color: #f1f1f1;
         }
 
-        .BancomSlide1 .te-wrapper {
+        .BancomSlide2 .te-wrapper {
             position: relative;
             width: 300px;
             height: 250px;
@@ -71,26 +71,26 @@
             font-family: Source Sans Pro;
         }
 
-        .BancomSlide1 .bzm_text {
+        .BancomSlide2 .bzm_text {
             margin-top: 10px;
             margin-left: 5px;
             text-align: left;
         }
 
-        .BancomSlide1 .bzm_text_bold,
-        .BancomSlide1 .bzm_text_medium {
+        .BancomSlide2 .bzm_text_bold,
+        .BancomSlide2 .bzm_text_medium {
             line-height: 1.4;
             text-decoration: none;
             color: #000;
         }
 
-        .BancomSlide1 .bzm_text_bold {
+        .BancomSlide2 .bzm_text_bold {
             font-size: 19px;
             font-weight: 700;
             line-height: 1;
         }
 
-        .BancomSlide1 .bzm_text_medium {
+        .BancomSlide2 .bzm_text_medium {
             font-size: 16px;
             font-weight: 400;
         }
@@ -101,54 +101,54 @@
 
         /*******************************************************/
 
-        .BancomSlide1 .te-perspective {
+        .BancomSlide2 .te-perspective {
             -webkit-perspective: 1000;
         }
 
-        .BancomSlide1 .te-cover,
-        .BancomSlide1 .te-transition {
+        .BancomSlide2 .te-cover,
+        .BancomSlide2 .te-transition {
             width: 300px;
             height: 170px;
         }
 
-        .BancomSlide1 .te-cover.te-hide,
-        .BancomSlide1 .te-transition,
-        .BancomSlide1 .te-images {
+        .BancomSlide2 .te-cover.te-hide,
+        .BancomSlide2 .te-transition,
+        .BancomSlide2 .te-images {
             display: none;
         }
 
-        .BancomSlide1 .te-images {
+        .BancomSlide2 .te-images {
             width: 300px;
             height: 170px;
         }
 
-        .BancomSlide1 .te-cover>img,
-        .BancomSlide1 .te-images>img {
+        .BancomSlide2 .te-cover>img,
+        .BancomSlide2 .te-images>img {
             width: 300px;
             height: 170px;
         }
 
-        .BancomSlide1 .te-transition.te-show {
+        .BancomSlide2 .te-transition.te-show {
             display: block;
         }
 
-        .BancomSlide1 .te-back,
-        .BancomSlide1 .te-front {
+        .BancomSlide2 .te-back,
+        .BancomSlide2 .te-front {
             position: absolute;
             width: 100%;
             height: 100%;
         }
 
-        .BancomSlide1 .te-front {
+        .BancomSlide2 .te-front {
             z-index: 2;
         }
 
-        .BancomSlide1 .te-back {
+        .BancomSlide2 .te-back {
             z-index: 1;
             -webkit-backface-visibility: hidden;
         }
 
-        .BancomSlide1 .te-transition img {
+        .BancomSlide2 .te-transition img {
             position: absolute;
             left: 0px;
             top: 0px;
@@ -156,15 +156,15 @@
 
         /***************** example3 ********************/
 
-        .BancomSlide1 .te-example3 .te-front {
+        .BancomSlide2 .te-example3 .te-front {
             z-index: 1;
         }
 
-        .BancomSlide1 .te-example3 .te-back {
+        .BancomSlide2 .te-example3 .te-back {
             z-index: 2;
         }
 
-        .BancomSlide1 .te-example3.te-show .te-back {
+        .BancomSlide2 .te-example3.te-show .te-back {
             -webkit-animation: example3Back 0.4s ease-out forwards;
         }
 
@@ -179,7 +179,7 @@
             }
         }
 
-        .BancomSlide1 #botones-para-compartir {
+        .BancomSlide2 #botones-para-compartir {
             text-align: right;
         }
 
@@ -208,7 +208,7 @@
             -o-transition: all .5s;
         }
 
-        .BancomSlide1 .logo {
+        .BancomSlide2 .logo {
             width: 53px;
             z-index: 2;
             background-color: transparent;
@@ -216,33 +216,60 @@
             float: right;
             height: 22px;
             text-align: center;
-            margin-top: 22.5px;
-            margin-left: -182px
+            margin-top: 0px;
+            margin-left: 0px
         }
-        
+
+        .BancomSlide2 .ctaButton {
+            position: absolute;
+            cursor: pointer;
+            opacity: 1;
+            background-color: rgba(6, 33, 87, 1);
+            font-family: "Source Sans Pro";
+            font-size: 14px;
+            color: #ffffff;
+            font-weight: bold;
+            font-style: normal;
+            text-decoration: none;
+            text-align: center;
+            line-height: 100%;
+            letter-spacing: 0px;
+            text-shadow: 0px 0px 0px rgba(214, 214, 214, 1);
+            border-radius: 5px;
+            border-color: rgba(0, 100, 150, 0);
+            border-width: 1px;
+            margin: -1px;
+            border-style: solid;
+            width: 96px;
+            height: 24px;
+            margin-left: -92px;
+            margin-top: 42.5px
+        }
+
+        @media screen and (max-width: 480px) {
+            .ctaButton {
+                font-size: 10px!important;
+                font-weight: normal;
+            }
+        }
     </style>
 </head>
 
-<body class="BancomSlide1" style="margin:0px;">
+<body class="BancomSlide2" style="margin:0px;">
     <div class="te-container">
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/GroIA2J.png" alt="" /> <img src="https://i.imgur.com/Rfuw2kL.png" alt="" /> <img src="https://i.imgur.com/UCIkwi0.png" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/UCIkwi0.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:0px; margin-left: 10px; margin-right: 10px;">
+                <div style="margin-top:-5px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:18px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:22px;">
 						    Descubre el nuevo diseño del sitio.
 						</span>
-                        <span style="float:left; color:#000000; font-size:14px;">
-                            <i>
-                                Conoce el nuevo Bancomer.com
-                            </i>
-                        </span>
                         <img class="logo" src="https://i.imgur.com/JTmm9Rf.png" alt="">
                     </div>
                 </div>
@@ -251,7 +278,7 @@
     </div>
 
     <script>
-        /*var BancomSlide1 = (function() {
+        /*var BancomSlide2 = (function() {
             //funcionamiento del script
             var teWrapper = null,
                 teCover = null,
@@ -394,7 +421,7 @@
                 show: show
             };
         })();
-        BancomSlide1.show('BancomSlide1');*/
+        BancomSlide2.show('BancomSlide2');*/
     </script>
 </body>
 </html>
