--- a/Dji/Cube3d.html
+++ b/Dji/Cube3d.html
@@ -615,10 +615,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 26px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(6px, 64px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(6px, 64px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(6px, 64px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(6px, 64px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
 }
 /*#/#*//*#i4.i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
@@ -663,13 +663,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 26px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 26px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(6px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(6px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(6px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(6px, 71px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -738,10 +738,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(6px, 67px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(6px, 67px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(6px, 67px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(6px, 67px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i74.i79.text.css:text/base/css*/
-#i79 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i79 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i79.i80.positioning.css:positioning/base/css.1*/
 #i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 24px;
         -ms-transform: translate(0, 0) translate(14px, 166px) rotate(0deg);
