--- a/BlueTelecom/blueSlide2.html
+++ b/BlueTelecom/blueSlide2.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://track.adform.net/C/?bn=22512744';
+                adfClickTAGUrl = 'http://bluetelecomm.mx/internet-inalambrico.php';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
