--- a/Dayliss/Cube3d.html
+++ b/Dayliss/Cube3d.html
@@ -500,13 +500,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(4px, 61px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(4px, 61px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(4px, 61px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(4px, 61px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
 }
 /*#/#*//*#i4.i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
@@ -529,7 +529,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i104.i105.actions-clicktag.css:actions-clicktag/base/css.1*/
+/*#/#*//*#i101.i102.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
 #i91 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -554,10 +554,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 264px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(-4px, 63px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-4px, 63px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-4px, 63px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-4px, 63px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -709,7 +709,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i106.i107.actions-clicktag.css:actions-clicktag/base/css.1*/
+/*#/#*//*#i103.i104.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -734,10 +734,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 62px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 62px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 62px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 62px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -760,7 +760,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i108.i109.actions-clicktag.css:actions-clicktag/base/css.1*/
+/*#/#*//*#i105.i106.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i99 { cursor: pointer; }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
 #i99 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -790,8 +790,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">7 increíbles beneficios 
-del  betabel</div>
+<div id="i14">7 increíbles beneficios del betabel</div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
 <img id="i56" src="https://i.imgur.com/FLnofOJ.jpg"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
@@ -805,7 +804,7 @@ del  betabel</div>
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Desayuna como rey, como como príncipe, cena como mendigo.</div>
+<div id="i24">Desayuna como rey, come como príncipe, cena como mendigo.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/PR9Bn1U.jpg"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
@@ -869,11 +868,11 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i4.i64.image.js:image/base/js*/
 
-/*#/#*//*#i91.i104.actions.js:actions/base/js*/
+/*#/#*//*#i91.i101.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
-    /*#i104.i105.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.daylish.mx/blog/propiedades-milagrosas-de-la-curcuma/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.daylish.mx/blog/7-increibles-beneficios-del-betabel/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -887,11 +886,11 @@ document.getElementById('i4').addEventListener('click', function(e){
 
 /*#/#*//*#i5.i66.image.js:image/base/js*/
 
-/*#/#*//*#i95.i106.actions.js:actions/base/js*/
+/*#/#*//*#i95.i103.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
-    /*#i106.i107.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.daylish.mx/blog/propiedades-milagrosas-de-la-curcuma/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.daylish.mx/blog/desayuna-como-rey-come-como-principe-cena-como-mendigo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -905,11 +904,11 @@ document.getElementById('i5').addEventListener('click', function(e){
 
 /*#/#*//*#i6.i68.image.js:image/base/js*/
 
-/*#/#*//*#i99.i108.actions.js:actions/base/js*/
+/*#/#*//*#i99.i105.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
-    /*#i108.i109.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.daylish.mx/blog/propiedades-milagrosas-de-la-curcuma/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.daylish.mx/blog/propiedades-milagrosas-de-la-curcuma/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
@@ -937,8 +936,7 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
-name: 7 increíbles beneficios 
-del  betabel; customName: false;
+name: 7 increíbles beneficios del betabel; customName: false;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i56.image.meta:image/meta*/
@@ -962,7 +960,7 @@ name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i24.text.meta:text/meta*/
-name: Desayuna como rey, como como príncipe, cena como mendigo.; customName: false;
+name: Desayuna como rey, come como príncipe, cena como mendigo.; customName: false;
 /*#/#*//*#i24.i25.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
