--- a/Dayliss/Cube3d.html
+++ b/Dayliss/Cube3d.html
@@ -492,75 +492,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
 #i20 { background-color: #fafafa; opacity: 1;
 }
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(4px, 56px) rotate(0deg);
-}
-/*#/#*//*#i4.i56.image.css:image/base/css*/
-#i56 { opacity: 1; }
-/*#/#*//*#i56.i57.positioning.css:positioning/base/css.1*/
-#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 215px;
-        -ms-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
-}
-/*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1;}
-/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
-#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 33px;
-        -ms-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
-        transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i101.i102.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
-/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 264px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-4px, 56px) rotate(0deg);
-}
-/*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -690,6 +621,75 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
+}
+/*#/#*//*#i4.i56.image.css:image/base/css*/
+#i56 { opacity: 1; }
+/*#/#*//*#i56.i57.positioning.css:positioning/base/css.1*/
+#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 215px;
+        -ms-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -65px) rotate(0deg);
+}
+/*#/#*//*#i4.i64.image.css:image/base/css*/
+#i64 { opacity: 1;}
+/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
+#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 33px;
+        -ms-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
+        transform: translate(0, 0) translate(205px, 209px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i101.i102.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i5.i24.text.css:text/base/css*/
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: 24px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 293px; height: 74px;
+        -ms-transform: translate(-50%, -50%) translate(3px, 63px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(3px, 63px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(3px, 63px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(3px, 63px) rotate(0deg);
+}
+/*#/#*//*#i5.i58.image.css:image/base/css*/
+#i58 { opacity: 1; }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 200px;
         -ms-transform: translate(0, 0) translate(0px, -50px) rotate(0deg);
@@ -731,13 +731,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: 24px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 52px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 293px; height: 76px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 62px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 62px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 62px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 62px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
