Added Video Container

--- a/Dayliss/daylishVideo.html
+++ b/Dayliss/daylishVideo.html
@@ -29,16 +29,15 @@
 		.Adidas1Video .logo {
 					width: 41%;
 		z-index: 2;
-		
 		float: right;
 		height: 30px;
 		text-align: center;
 		margin-top: 0;
-		margin-right: -15px
+		margin-right: -15px!important
 			}
 
 </style>
-
+<div class="Adidas1Video">
 <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <a href="https://http://www.daylish.mx/nosotros/" style="display: block;" target="block">
@@ -75,6 +74,7 @@
 					</div>
 			</div>
     </a>
+</div>
 </div>
 
 <script type="text/javascript">
