Modificacion fijo seat

--- a/Seat/fijo.html
+++ b/Seat/fijo.html
@@ -61,7 +61,7 @@
             width: 300px;
             height: 250px;
             margin: 0 auto;
-            background-color: #f1f1f1;
+            background-color: #ffffff;
         }
 
         .HousellSlide1 .te-wrapper {
@@ -210,15 +210,15 @@
         }
 
         .HousellSlide1 .logo {
-            width: 62px;
+           
             z-index: 2;
             background-color: transparent;
             border-radius: 0px;
             float: right;
             height: 15px;
             text-align: center;
-            margin-top: 10px;
-            margin-right: 6.5px
+            margin-top: 5px;
+            margin-right: -10px
         }
 	 </style> 
 </head>
@@ -227,11 +227,10 @@
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/m72wjh3.png" alt="" /> 
-                <img src="https://i.imgur.com/TX9D2Yv.png" alt="" /> 
-                <img src="https://i.imgur.com/2oNFBwz.png" alt="" /> </div>
+                <img src="https://i.imgur.com/cD2GkM9.png" alt="" /> 
+                 </div>
                 <div class="te-cover"> 
-                    <img src="https://i.imgur.com/m72wjh3.png" alt="" /> 
+                    <img src="https://i.imgur.com/cD2GkM9.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -239,10 +238,10 @@
                 </div>
                 <div style="margin-top:-5px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text"> 
-                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:18px; text-align: center;">
-                            Descubre cuanto puedes ahorrar vendiendo tu casa con una inmobiliaria digital
+                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b;font-style:Trebuchet MS; font-size:21px; text-align: center;">
+                          La potencia y nueva tecnología que tu camino necesita   
                         </span> 
-                        <img class="logo" src="https://i.imgur.com/Qw2jb2H.png" alt=""> 
+                        <img class="logo" src="https://i.imgur.com/KAJDmTN.jpg"  style="height: 32px"> 
                     </div>
                 </div>
             </div>
