--- a/Seat/fijo.html
+++ b/Seat/fijo.html
@@ -76,6 +76,7 @@
             margin-top: 10px;
             margin-left: 5px;
             text-align: left;
+            font: trebuchet MS 
         }
 
         .HousellSlide1 .bzm_text_bold,
@@ -217,7 +218,7 @@
             float: right;
             height: 15px;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 3px;
             margin-right: -10px
         }
 	 </style> 
@@ -241,7 +242,7 @@
                         <span class="bzm_text_title bzm_text_bold" style="color:#2d363b;font-style:Trebuchet MS; font-size:21px; text-align: center;">
                           La potencia y nueva tecnología que tu camino necesita   
                         </span> 
-                        <img class="logo" src="https://i.imgur.com/KAJDmTN.jpg"  style="height: 32px"> 
+                        <img class="logo" src="https://i.imgur.com/KAJDmTN.jpg"  style="height: 35px"> 
                     </div>
                 </div>
             </div>
