--- a/Seat/fijo.html
+++ b/Seat/fijo.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://track.adform.net/C/?bn=22512744';
+                adfClickTAGUrl = 'http://www.seat.mx/autos/nuevo-leon-cupra/descubre.html';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
