--- a/sernatur/Sernatur-story.html
+++ b/sernatur/Sernatur-story.html
@@ -22,7 +22,7 @@
     }
 
     .HuaweiScroll1 .bzm_wrapper.size_320x480 {
-        width: 340px;
+        width: 320px;!important 
         height: 480px;
         background-color: #FFF;
         overflow-y: auto;
