--- a/Grupo salud bucal/Cube3d.html
+++ b/Grupo salud bucal/Cube3d.html
@@ -810,7 +810,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 150px;
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 150px; margin-bottom: 10px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
