Correccion de color de texto

--- a/Grupo salud bucal/slider-espanol.html
+++ b/Grupo salud bucal/slider-espanol.html
@@ -127,7 +127,7 @@
 				</div>
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="color:#474646;line-height:1.1; font-size:18px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="color:#4b4b4b;line-height:1.1; font-size:18px; text-align:left; margin-bottom: 0px">
 						  Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal...
 						</span>
 						
