Correcciones de color

--- a/Grupo salud bucal/slider-english.html
+++ b/Grupo salud bucal/slider-english.html
@@ -127,7 +127,7 @@
 				</div>
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="color:#4b4b4b;line-height:1.1; font-size:18px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="color:#605e5e;line-height:1.1; font-size:18px; text-align:left; margin-bottom: 0px">
 						   Dental Implants  70% off at San Cristobal de las casas Chiapas, Mexico.
 						</span>
 						
