Correcciones de texto

--- a/Grupo salud bucal/slider-espanol.html
+++ b/Grupo salud bucal/slider-espanol.html
@@ -128,7 +128,7 @@
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
 						<span class="bzm_text_title  bzm_text_bold" style="color:#605e5e;line-height:1.1; font-size:18px; text-align:left; margin-bottom: 0px">
-						  Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal...
+						  Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal.
 						</span>
 						
 						
