--- a/Grupo salud bucal/Cube-spanish3d.html
+++ b/Grupo salud bucal/Cube-spanish3d.html
@@ -894,7 +894,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Implantes dentales desde $10'000.00 pesos en CDMX, incluye corona metal porcelana</div>
+<div id="i14">Implantes dentales desde $10'000.00 pesos en CDMX, incluye corona metal porcelana.</div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
 <img id="i56" src="https://i.imgur.com/cA3x2LB.jpg"/>
 <!--#/#--><!--#i4.i104.image.html:image/html-->
@@ -914,7 +914,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal...</div>
+<div id="i24">Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/1enOHza.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
