Changed Alignment and Background color

--- a/AmericanExpress/fijo.html
+++ b/AmericanExpress/fijo.html
@@ -66,7 +66,7 @@
             width: 300px;
             height: 250px;
             margin: 0 auto;
-            background-color: #ffffff;
+            background-color: #f1f1f1;
         }
 
         .AmericanFijo .te-wrapper {
@@ -223,7 +223,7 @@
             float: right;
             height: 15px;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 22.5px;
             margin-right: -5px
         }
 	 </style> 
@@ -244,7 +244,7 @@
                 </div>
                 <div style="margin-top:-5px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text"> 
-                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:18px; text-align: center;">
+                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:22px; text-align: center;">
                           El aliado ideal para tu día a día.
                         </span> 
                         <img class="logo" src="https://i.imgur.com/h2vfz37.png"  style="height:40px"> 
