Correccion posicion de redes

--- a/germana/autogermana_fade.html
+++ b/germana/autogermana_fade.html
@@ -216,7 +216,9 @@
         }
 
         .ClaroColombiaFade #botones-para-compartir {
-            text-align:left
+            text-align:left;
+            margin-left: 12px
+            
         }
 
         .likedini:hover,
