Changed Text alignment

--- a/AmericanExpress/fijo.html
+++ b/AmericanExpress/fijo.html
@@ -209,9 +209,9 @@
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:15px; margin-left: 10px; margin-right: 10px;">
+                <div style="margin-top:15px; margin-left:0px; margin-right: 10px;">
                     <div class="bzm_text"> 
-                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:22px; text-align: center;">
+                        <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:22px; text-align:left;">
                           El aliado ideal para tu día a día.
                         </span> 
                         <img class="logo" src="https://i.imgur.com/h2vfz37.png"  style="height:40px"> 
